--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 
 /* Text */
+
+h3 {
+    font-size: 20px;
+    font-variant-caps: all-small-caps;
+    font-weight: 400;
+}
+
+h2 {
+
+}
 /* 
 p {
   font-family: Raleway;
