--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ h3 {
     font-size: 20px;
     font-variant-caps: all-small-caps;
     font-weight: 400;
-    color: chocolate;
+    color: forestgreen;
 }
 
 h2 {
