Commented out style.css h3 fields

--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
 /* Text */
 
 h3 {
-    font-size: 20px;
+    /* font-size: 20px;
     font-variant-caps: all-small-caps;
     font-weight: 400;
-    color: forestgreen;
+    color: forestgreen; */
 }
 
 /* 
