--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
+/* Headers */
 .section-header {
-  font-weight: 600;
-  font-size: 2em;
+  /* font-weight: 600; */
+  font-size: 1.5em;
+  text-transform: uppercase;
 }
 
+/* Cards */
 .card {
   transition: transform 0.3s, box-shadow 0.3s;
   overflow: hidden;
@@ -21,6 +24,7 @@
   transform: scale(1.02);
 }
 
+/* Images */
 .img-box {
   overflow: hidden;
 }
@@ -32,4 +36,9 @@
 
 .img-box a img:hover {
     transform: scale(1.02);
+}
+
+/* Nav Buttons */
+.nav-pills {
+
 }
