--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
   color: #00A3BA;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
-  font-weight: 500;
   font-size: 24px;
   line-height: 24px;
 }
@@ -15,6 +14,25 @@
 #navbarToggle a {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
+  color:grey;
+}
+
+#navbarToggle .active {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  color: #00A3BA;
+}
+
+/* This is to override the default 'blue' background highlight
+for when a color mode is selected */
+.dropdown-item.active
+{
+  background-color: transparent;
+}
+
+.btn-link
+{
+    color:grey;
 }
 
 /* Headers */
@@ -48,7 +66,6 @@ h3 {
 h4 {
   color:grey;
   font-family: 'Oswald', sans-serif;
-  /* text-transform: uppercase; */
   font-weight: normal;
   font-size: 18px;
   line-height: 18px;
